--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 server:
   port: 8081
-
 spring:
+  main:
+    allow-circular-references: true
   application:
     name: mcp-client
   ai:
@@ -13,6 +14,7 @@ spring:
           model: ${OPENAI_MODEL}
     vectorstore:
       redis:
+        enabled: true
         initialize-schema: true  #是否初始化所需模式
         index-name: lee-vectorstore #用于存储向量的名称
         prefix: 'embedding:'  # redis键的前缀
@@ -20,3 +22,10 @@ spring:
     redis:
       host: 127.0.0.1
       port: 6379
+      timeout: 5000
+      connect-timeout: 2000
+      database: 0
+logging:
+  level:
+    ai:
+      djl: debug
