--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -29,3 +29,8 @@ logging:
   level:
     ai:
       djl: debug
+internet:
+  websearch:
+    searxng:
+      url: http://127.0.0.1:8888/search
+      limit: 10
