feat(client): 添加 MCP 客户端功能
- 新增 MCP客户端配置和相关服务接口
- 实现 MCP 服务的基本功能
- 添加测试接口和配置文件支持
- 更新项目结构，更名为 McpClientApplication

--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -12,6 +12,19 @@ spring:
       chat:
         options:
           model: ${OPENAI_MODEL}
+    mcp:
+      client:
+        sse:
+          connections:
+            server1:
+              url: https://mcp.amap.com
+              sse-endpoint: /sse?key=089879e601328583bb95e335f746fe8b
+            server2:
+              url: http://localhost:9060
+              sse-endpoint: /sse
+        stdio:
+          servers-configuration: classpath:mcp-server.json
+
     vectorstore:
       redis:
         enabled: true
