--- a/mcp-client/pom.xml
+++ b/mcp-client/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-mcp-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
