--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>mcp-client</module>
+        <module>mcp-server</module>
     </modules>
 
     <properties>
