feat(server): 新增产品管理功能并优化邮件工具
- 新增 Product 实体类、ProductMapper、IProductService 和 ProdductServciceImpl
- 添加 ProductTool 组件，实现商品创建功能- 更新 EmailTool，增加获取邮箱相关功能
- 优化 ChatClientConfig，添加消息记忆顾问
- 调整 pom.xml 和 application.yml 文件以支持新功能

--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -24,13 +24,14 @@ spring:
               sse-endpoint: /sse
         stdio:
           servers-configuration: classpath:mcp-server.json
-
+  datasource:
     vectorstore:
       redis:
         enabled: true
         initialize-schema: true  #是否初始化所需模式
         index-name: lee-vectorstore #用于存储向量的名称
         prefix: 'embedding:'  # redis键的前缀
+
   data:
     redis:
       host: 127.0.0.1
@@ -38,10 +39,12 @@ spring:
       timeout: 5000
       connect-timeout: 2000
       database: 0
+
 logging:
   level:
     ai:
       djl: debug
+
 internet:
   websearch:
     searxng:
